--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -9,6 +9,7 @@ body {
     background: rgb(20, 20, 20);
 }
 
+
 h2 {
     color: white;
     display: flex;
@@ -61,3 +62,4 @@ li {
 
 $header-color: rgb(30, 30, 30);
 $body-color: rgb(20, 20, 20);
+$hover-color: #fdd558;
