--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,6 @@
 /* ========================== HEADER ========================== */
 /* ========================== HEADER ========================== */
+
 header {
     width: 100%;
     display: flex;
@@ -19,27 +20,17 @@ header {
     }
 }
 
-.menu {
-    display: flex;
-    justify-content: space-around;
+.navbar .navbar-nav .nav-link{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.4rem;
+    transition: color 0.3s ease;
+    border-bottom: 1px solid transparent;
 
-    &>li>.anchor_nav {
-        display: flex;
-        justify-content: space-around;
-        padding: 15px 2vw;
-        color: rgb(235, 235, 235);
-    }
-
-    & li a:hover {
-        color: #fdd558;
-        transition: all .3s;
-        transition: opacity 1.5s;
-        background-color: rgb(25, 25, 25);
-        border-radius: 5px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
+    &:hover{
+        color: $hover-color;
     }
 }
+
 
 /* ========================== MODO SMARTPHONE ========================== */
 /* ========================== MODO SMARTPHONE ========================== */
