--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,8 @@ footer .footer-container .social a {
   border-left: 2px solid white;
   border-right: 2px solid white;
   width: 100%;
-  height: 100%;
+  height: 323px;
+  object-fit: cover;
 }
 
 .titulo {
