--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -44,7 +44,8 @@
         border-left: 2px solid white;
         border-right: 2px solid white;
         width: 100%;
-        height: 100%;
+        height: 323px;
+        object-fit: cover;
     }
 }
 
