--- a/css/styles.css
+++ b/css/styles.css
@@ -205,10 +205,12 @@ footer .footer-container .social a {
   border-right: 2px solid white;
   border-bottom: 2px solid white;
   font-weight: bold;
-  font-size: 100%;
+  font-size: 20px;
+  padding: 16px 0px;
 }
 .ver-noticia-completa:hover {
   text-decoration: underline;
+  color: #fdd558;
 }
 
 .ver-completo-container {
