--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -75,10 +75,12 @@
     border-right: 2px solid white;
     border-bottom: 2px solid white;
     font-weight: bold;
-    font-size: 100%;
+    font-size: 20px;
+    padding: 16px 0px;
 
     &:hover {
         text-decoration: underline;
+        color: #fdd558;
     }
 }
 
@@ -270,6 +272,7 @@
         transform: none;
     }
 }
+
 
 /* ========================== BREAKPOINT INTERMEDIO ENTRE TABLET Y SMARTPHONE ========================== */
 
