--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   background: rgb(20, 20, 20);
 }
 
-h2 {
+h2, h1 {
   color: white;
   display: flex;
   justify-content: center;
@@ -119,6 +119,10 @@ footer .footer-container .copy {
   flex-grow: 1;
   margin-left: 180px;
 }
+footer .footer-container .copy h2 {
+  font-family: "Roboto Slab", serif;
+  font-size: 1.5rem;
+}
 footer .footer-container .social a {
   margin-left: 10px;
 }
@@ -134,6 +138,10 @@ footer .footer-container .social a {
     justify-content: center;
     margin: 0;
     padding-bottom: 10px;
+  }
+  footer .footer-container .copy h2 {
+    font-family: "Roboto Slab", serif;
+    font-size: 1rem;
   }
 }
 /* ========================== ULTIMAS NOTICIAS ========================== */
