--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -15,6 +15,10 @@ footer {
             text-align: center;
             flex-grow: 1;
             margin-left: 180px;
+            h2{
+                font-family: 'Roboto Slab', serif;
+                font-size: 1.5rem;
+            }
         }
 
         .social a {
@@ -38,6 +42,10 @@ footer {
                 justify-content: center;
                 margin: 0;
                 padding-bottom: 10px;
+                h2{
+                    font-family: 'Roboto Slab', serif;
+                    font-size: 1rem;
+                }
             }
         }
 
